Remove vault file

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -155,7 +155,7 @@ filter_plugins     = /usr/share/ansible_plugins/filter_plugins
 # current IP information.
 fact_caching = memory
 
-vault_password_file = vault.key
+#vault_password_file = vault.key
 
 # retry files
 #retry_files_enabled = False
