--- a/playbooks/helloworld.yml
+++ b/playbooks/helloworld.yml
@@ -1,7 +1,7 @@
 ---
 - name: Hello World!
   hosts: localhost
-  gather_facts: true
+  gather_facts: false
 
   tasks:
     - name: Print "Hello world!"
